# boojy-audio

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  appcast.xml  build.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BETA_ROADMAP.md  BOOJY_SOUND_LIBRARY.md  FEATURES.md  IMPLEMENTATION.md  ROADMAP.md  UI_DESIGN.md  UI_REVIEW.md  boojy-audio-future-features.md  v0.2-design.md
docs/archive/: BETA_ROADMAP.md  COMPETITIVE_ANALYSIS.md  IMPLEMENTATION.md  MILESTONES.md  MVP_SPEC.md  UPDATED_DOCS.md  VST3_PLUGIN_UI_PLAN.md  website-spec.md
docs/private/: ui_review_2026_03_26.md
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/benches/: audio_rendering.rs
engine/src/: audio_file.rs  audio_graph.rs  audio_input.rs  effects.rs  ffi.rs  latency_test.rs  lib.rs  midi.rs  midi_input.rs  midi_recorder.rs  preview.rs  project.rs  recorder.rs  sampler.rs  stretch.rs  synth.rs  track.rs  vst3_host.rs  web_audio.rs  web_bindings.rs
engine/src/api/: effects.rs  helpers.rs  init.rs  latency.rs  midi_clips.rs  midi_input.rs  mod.rs  preview.rs  project.rs  recording.rs  remaining.rs  synthesizer.rs  timing.rs  tracks.rs  transport.rs  vst3.rs
engine/src/audio_graph/: device.rs  mod.rs  offline.rs  project.rs  renderer.rs
engine/src/export/: dither.rs  metadata.rs  mp3.rs  normalize.rs  options.rs  resample.rs  stems.rs  wav.rs
engine/src/ffi/: clips.rs  devices.rs  effects.rs  export.rs  latency.rs  midi.rs  mod.rs  preview.rs  project.rs  recording.rs  synth.rs  tracks.rs  transport.rs  vst3.rs
engine/vst3_host/: vst3_host.cpp
ui/: analysis_options.yaml  pubspec.yaml
ui/lib/: audio_engine.dart  audio_engine_base.dart  audio_engine_native.dart  audio_engine_plugins.dart  audio_engine_recording.dart  audio_engine_stub.dart  audio_engine_tracks.dart  audio_engine_transport.dart  audio_engine_typedefs.dart  audio_engine_web.dart  main.dart
ui/lib/constants/: ui_constants.dart
ui/lib/controllers/: automation_controller.dart  controllers.dart  midi_clip_controller.dart  playback_controller.dart  recording_controller.dart  track_controller.dart
ui/lib/models/: audio_clip_edit_data.dart  chord_data.dart  clip_automation_data.dart  clip_data.dart  instrument_data.dart  library_item.dart  midi_cc_data.dart  midi_event.dart  midi_note_data.dart  project_metadata.dart  project_version.dart  project_view_state.dart  sampler_info.dart  scale_data.dart  snapshot.dart  timeline_item.dart  tool_mode.dart  track_automation_data.dart  track_data.dart  version_type.dart  vst3_plugin_data.dart
ui/lib/screens/: daw_screen.dart  daw_screen_io.dart  daw_screen_io_web.dart
ui/lib/services/: auto_save_service.dart  auto_save_service_io.dart  auto_save_service_io_web.dart  clip_naming_service.dart  library_preview_service.dart  library_service.dart  live_recording_notifier.dart  midi_capture_buffer.dart  midi_file_service.dart  midi_playback_manager.dart  plugin_preferences_service.dart  project_manager.dart  project_manager_native.dart  project_manager_stub.dart  project_manager_web.dart  snapshot_manager.dart  tool_mode_resolver.dart  undo_redo_manager.dart  updater_service.dart  user_settings.dart  version_manager.dart  vst3_editor_service.dart  vst3_editor_service_native.dart  vst3_editor_service_stub.dart  vst3_plugin_manager.dart  web_export_service.dart  web_storage_service.dart  window_title_service.dart
ui/lib/state/: ui_layout_state.dart
ui/lib/theme/: animation_constants.dart  app_colors.dart  boojy_icons.dart  theme_extension.dart  theme_provider.dart  tokens.dart
ui/lib/utils/: clip_overlap_handler.dart  engine_result.dart  grid_utils.dart  logger.dart  platform_utils.dart  text_utils.dart  track_colors.dart
ui/lib/widgets/: app_settings_dialog.dart  capsule_fader.dart  capture_midi_dialog.dart  create_snapshot_dialog.dart  create_version_dialog.dart  editor_panel.dart  effect_parameter_panel.dart  export_dialog.dart  file_drop_zone.dart  horizontal_level_meter.dart  input_selector_dropdown.dart  instrument_browser.dart  keyboard_shortcuts_overlay.dart  library_panel.dart  library_preview_bar.dart  library_preview_waveform.dart  mixer_panel.dart  pan_knob.dart  piano_roll.dart  platform_drop_target.dart  platform_drop_target_native.dart  platform_drop_target_stub.dart  platform_drop_target_web.dart  project_settings_dialog.dart  resizable_divider.dart  settings_dialog.dart  snapshots_list_dialog.dart  star_field.dart  synthesizer_panel.dart  timeline_view.dart  track_header.dart  track_mixer_panel.dart  track_mixer_strip.dart  transport_bar.dart  virtual_piano.dart  vst3_editor_widget.dart  vst3_plugin_browser.dart  vst3_plugin_parameter_panel.dart
ui/macos/: Podfile  UpdaterChannel.swift
ui/macos/Flutter/: GeneratedPluginRegistrant.swift
ui/macos/Runner/: AppDelegate.swift  Info.plist  MainFlutterWindow.swift  SparkleUpdater.swift
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/test/: widget_test.dart
ui/test/constants/: ui_constants_test.dart
ui/test/controllers/: automation_controller_test.dart  midi_clip_controller_test.dart  playback_controller_test.dart  track_controller_test.dart
ui/test/mocks/: mock_audio_engine.dart
ui/test/models/: audio_clip_edit_data_test.dart  chord_data_test.dart  clip_automation_data_test.dart  clip_data_test.dart  instrument_data_test.dart  midi_cc_data_test.dart  (+8 more)
ui/web/: index.html  manifest.json  service-worker.js
ui/windows/: CMakeLists.txt
(+177 files in other folders)
