[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["desktop"]
desktop = ["vst3", "midi"]  # VST3 now enabled for Windows
mobile = []
vst3 = []
midi = []
# ASIO support for Windows (professional low-latency audio)
# To enable: cargo build --features asio
# Requires: ASIO SDK (auto-downloaded or set CPAL_ASIO_DIR)
# Requires: LLVM/clang for bindgen (set LIBCLANG_PATH)
asio = ["cpal/asio"]

[dependencies]
# Audio I/O and playback
cpal = "0.15"                    # Cross-platform audio I/O
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }  # Audio decoding
rubato = "0.15"                  # Sample rate conversion
ringbuf = "0.4"                  # Lock-free audio buffers

# Utilities
anyhow = "1.0"                   # Error handling

# Serialization (M5)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio export (M5)
hound = "3.5"                    # WAV encoding/decoding
id3 = "1.14"                     # ID3v2 tag writing for MP3 metadata
# Note: MP3 encoding uses ffmpeg via command line (commonly available on macOS/Linux)

# FFI bridge
flutter_rust_bridge = "2"        # Flutter-Rust bridge

# VST3 Plugin Hosting (M7)
# Note: VST3 hosting will require custom FFI bindings to VST3 SDK
# For now, adding supporting libraries for plugin infrastructure
lazy_static = "1.4"              # Plugin registry singleton
parking_lot = "0.12"             # Better mutexes for plugin thread safety
flate2 = "1.0"                   # Plugin state compression
base64 = "0.21"                  # Base64 encoding for plugin state
walkdir = "2.4"                  # Directory traversal for plugin scanning

# MIDI I/O (desktop only - midir doesn't support iOS)
[target.'cfg(not(target_os = "ios"))'.dependencies]
midir = "0.9"                    # Cross-platform MIDI I/O
