[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["desktop"]
desktop = ["vst3", "midi", "native-audio"]  # Native platforms with full features
mobile = ["native-audio"]                    # iOS/Android with native audio
web = []                                     # Web/WASM target (uses Web Audio API)
native-audio = []                            # Flag for cpal-based audio
vst3 = []
midi = []
# ASIO support for Windows (professional low-latency audio)
# To enable: cargo build --features asio
# Requires: ASIO SDK (auto-downloaded or set CPAL_ASIO_DIR)
# Requires: LLVM/clang for bindgen (set LIBCLANG_PATH)
asio = ["cpal/asio"]

[dependencies]
# Audio decoding (works on all platforms including WASM)
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }
rubato = "0.15"                  # Sample rate conversion
ringbuf = "0.4"                  # Lock-free audio buffers
signalsmith-stretch = "0.1"      # Pitch-preserved time-stretching

# Utilities
anyhow = "1.0"                   # Error handling

# Serialization (M5)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio export (M5)
hound = "3.5"                    # WAV encoding/decoding
id3 = "1.14"                     # ID3v2 tag writing for MP3 metadata
# Note: MP3 encoding uses ffmpeg via command line (commonly available on macOS/Linux)

# VST3 Plugin Hosting (M7)
lazy_static = "1.4"              # Plugin registry singleton
parking_lot = "0.12"             # Better mutexes for plugin thread safety
flate2 = "1.0"                   # Plugin state compression
base64 = "0.21"                  # Base64 encoding for plugin state
walkdir = "2.4"                  # Directory traversal for plugin scanning

# ============================================
# Native platform dependencies (non-WASM)
# ============================================

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"                    # Cross-platform audio I/O
flutter_rust_bridge = "2"        # Flutter-Rust bridge

# MIDI I/O (desktop only - midir doesn't support iOS or WASM)
[target.'cfg(all(not(target_os = "ios"), not(target_arch = "wasm32")))'.dependencies]
midir = "0.9"                    # Cross-platform MIDI I/O

# CoreAudio device latency querying (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"            # CoreAudio bindings for accurate latency measurement

# ============================================
# Web/WASM platform dependencies
# ============================================

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "AudioContext",
    "AudioContextState",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "GainNode",
    "GainOptions",
    "OscillatorNode",
    "OscillatorType",
    "BlobPropertyBag",
    "Blob",
    "Url",
    "MessageEvent",
    "ErrorEvent",
] }
getrandom = { version = "0.2", features = ["js"] }  # Random number generation for WASM

# Optimize third-party crates even in debug builds (faster runtime, minimal compile cost)
[profile.dev.package."*"]
opt-level = 2
